Code/syntax.output
Terminals unused in grammar

   WS
   LT
   LE
   EQ
   NE
   GT
   GE


State 1 conflicts: 2 reduce/reduce
State 14 conflicts: 2 reduce/reduce
State 16 conflicts: 1 reduce/reduce
State 28 conflicts: 1 shift/reduce
State 30 conflicts: 12 reduce/reduce
State 33 conflicts: 1 shift/reduce
State 34 conflicts: 1 reduce/reduce
State 39 conflicts: 1 reduce/reduce
State 54 conflicts: 1 reduce/reduce
State 74 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 105 conflicts: 1 shift/reduce
State 106 conflicts: 1 shift/reduce
State 107 conflicts: 1 shift/reduce
State 108 conflicts: 1 shift/reduce
State 109 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 111 conflicts: 10 shift/reduce
State 118 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | error

    3 ExtDefList: ExtDef ExtDefList
    4           | %empty
    5           | error

    6 ExtDef: Specifier ExtDecList SEMI
    7       | Specifier SEMI
    8       | Specifier FunDec CompSt
    9       | error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | error

   13 Specifier: TYPE
   14          | StructSpecifier
   15          | error

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag

   18 OptTag: ID
   19       | %empty
   20       | error

   21 Tag: ID
   22    | error

   23 VarDec: ID
   24       | VarDec LB INT RB
   25       | error

   26 FunDec: ID LP VarList RP
   27       | ID LP RP
   28       | error

   29 VarList: ParamDec COMMA VarList
   30        | ParamDec
   31        | error

   32 ParamDec: Specifier VarDec
   33         | error

   34 CompSt: LC DefList StmtList RC
   35       | error

   36 StmtList: Stmt StmtList
   37         | %empty

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt

   44 DefList: Def DefList
   45        | %empty
   46        | error

   47 Def: Specifier DecList SEMI
   48    | error

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp STAR Exp
   58    | Exp DIV Exp
   59    | Exp PLUS Exp
   60    | Exp MINUS Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | error

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 2 5 9 12 15 20 22 25 28 31 33 35 46 48 71
WS (258)
INT (259) 24 69
FLOAT (260) 70
ID (261) 18 21 23 26 27 64 65 67 68
SEMI (262) 6 7 38 40 47
COMMA (263) 11 29 50 72
ASSIGNOP (264) 52 53
LT (265)
LE (266)
EQ (267)
NE (268)
GT (269)
GE (270)
NOT (271) 63
DOT (272) 67
LP (273) 26 27 41 42 43 61 64 65
RP (274) 26 27 41 42 43 61 64 65
LB (275) 24 66
RB (276) 24 66
LC (277) 16 34
RC (278) 16 34
STAR (279) 57
DIV (280) 58
AND (281) 54
OR (282) 55
PLUS (283) 59
MINUS (284) 60 62
STRUCT (285) 16 17
RETURN (286) 40
IF (287) 41 42
ELSE (288) 42
WHILE (289) 43
TYPE (290) 13
RELOP (291) 56


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1 2, on right: 0
ExtDefList (39)
    on left: 3 4 5, on right: 1 3
ExtDef (40)
    on left: 6 7 8 9, on right: 3
ExtDecList (41)
    on left: 10 11 12, on right: 6 11
Specifier (42)
    on left: 13 14 15, on right: 6 7 8 32 47
StructSpecifier (43)
    on left: 16 17, on right: 14
OptTag (44)
    on left: 18 19 20, on right: 16
Tag (45)
    on left: 21 22, on right: 17
VarDec (46)
    on left: 23 24 25, on right: 10 11 24 32 51 52
FunDec (47)
    on left: 26 27 28, on right: 8
VarList (48)
    on left: 29 30 31, on right: 26 29
ParamDec (49)
    on left: 32 33, on right: 29 30
CompSt (50)
    on left: 34 35, on right: 8 39
StmtList (51)
    on left: 36 37, on right: 34 36
Stmt (52)
    on left: 38 39 40 41 42 43, on right: 36 41 42 43
DefList (53)
    on left: 44 45 46, on right: 16 34 44
Def (54)
    on left: 47 48, on right: 44
DecList (55)
    on left: 49 50, on right: 47 50
Dec (56)
    on left: 51 52, on right: 49 50
Exp (57)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71, on right: 38 40 41 42 43 52 53 54 55 56 57 58 59 60 61 62 63
    66 67 72 73
Args (58)
    on left: 72 73, on right: 64 72


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    2 Program: error .
    5 ExtDefList: error .
    9 ExtDef: error .
   15 Specifier: error .

    $end      reduce using rule 2 (Program)
    $end      [reduce using rule 5 (ExtDefList)]
    $end      [reduce using rule 9 (ExtDef)]
    error     reduce using rule 9 (ExtDef)
    error     [reduce using rule 15 (Specifier)]
    ID        reduce using rule 15 (Specifier)
    SEMI      reduce using rule 15 (Specifier)
    $default  reduce using rule 9 (ExtDef)


State 2

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag

    error  shift, and go to state 9
    ID     shift, and go to state 10

    LC  reduce using rule 19 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 3

   13 Specifier: TYPE .

    $default  reduce using rule 13 (Specifier)


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 14
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 15
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    6 ExtDef: Specifier . ExtDecList SEMI
    7       | Specifier . SEMI
    8       | Specifier . FunDec CompSt

    error  shift, and go to state 16
    ID     shift, and go to state 17
    SEMI   shift, and go to state 18

    ExtDecList  go to state 19
    VarDec      go to state 20
    FunDec      go to state 21


State 8

   14 Specifier: StructSpecifier .

    $default  reduce using rule 14 (Specifier)


State 9

   20 OptTag: error .
   22 Tag: error .

    LC        reduce using rule 20 (OptTag)
    $default  reduce using rule 22 (Tag)


State 10

   18 OptTag: ID .
   21 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 21 (Tag)


State 11

   16 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 12

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    5 ExtDefList: error .
    9 ExtDef: error .
   15 Specifier: error .

    $end      reduce using rule 5 (ExtDefList)
    $end      [reduce using rule 9 (ExtDef)]
    error     reduce using rule 9 (ExtDef)
    error     [reduce using rule 15 (Specifier)]
    ID        reduce using rule 15 (Specifier)
    SEMI      reduce using rule 15 (Specifier)
    $default  reduce using rule 9 (ExtDef)


State 15

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 16

   12 ExtDecList: error .
   25 VarDec: error .
   28 FunDec: error .

    error     reduce using rule 28 (FunDec)
    SEMI      reduce using rule 12 (ExtDecList)
    SEMI      [reduce using rule 25 (VarDec)]
    LC        reduce using rule 28 (FunDec)
    $default  reduce using rule 25 (VarDec)


State 17

   23 VarDec: ID .
   26 FunDec: ID . LP VarList RP
   27       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 23 (VarDec)


State 18

    7 ExtDef: Specifier SEMI .

    $default  reduce using rule 7 (ExtDef)


State 19

    6 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 20

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   24 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 10 (ExtDecList)


State 21

    8 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


State 22

   16 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 30
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    RC  reduce using rule 45 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 32
    Def              go to state 33


State 23

   26 FunDec: ID LP . VarList RP
   27       | ID LP . RP

    error   shift, and go to state 34
    RP      shift, and go to state 35
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 37
    ParamDec         go to state 38


State 24

    6 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 6 (ExtDef)


State 25

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 39
    ID     shift, and go to state 40

    ExtDecList  go to state 41
    VarDec      go to state 20


State 26

   24 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 42


State 27

   35 CompSt: error .

    $default  reduce using rule 35 (CompSt)


State 28

   34 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 30
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 45 (DefList)]
    INT     reduce using rule 45 (DefList)
    FLOAT   reduce using rule 45 (DefList)
    ID      reduce using rule 45 (DefList)
    NOT     reduce using rule 45 (DefList)
    LP      reduce using rule 45 (DefList)
    LC      reduce using rule 45 (DefList)
    RC      reduce using rule 45 (DefList)
    MINUS   reduce using rule 45 (DefList)
    RETURN  reduce using rule 45 (DefList)
    IF      reduce using rule 45 (DefList)
    WHILE   reduce using rule 45 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 43
    Def              go to state 33


State 29

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 30

   15 Specifier: error .
   46 DefList: error .
   48 Def: error .

    error     reduce using rule 15 (Specifier)
    error     [reduce using rule 46 (DefList)]
    error     [reduce using rule 48 (Def)]
    INT       reduce using rule 46 (DefList)
    INT       [reduce using rule 48 (Def)]
    FLOAT     reduce using rule 46 (DefList)
    FLOAT     [reduce using rule 48 (Def)]
    ID        reduce using rule 15 (Specifier)
    ID        [reduce using rule 46 (DefList)]
    ID        [reduce using rule 48 (Def)]
    NOT       reduce using rule 46 (DefList)
    NOT       [reduce using rule 48 (Def)]
    LP        reduce using rule 46 (DefList)
    LP        [reduce using rule 48 (Def)]
    LC        reduce using rule 46 (DefList)
    LC        [reduce using rule 48 (Def)]
    RC        reduce using rule 46 (DefList)
    RC        [reduce using rule 48 (Def)]
    MINUS     reduce using rule 46 (DefList)
    MINUS     [reduce using rule 48 (Def)]
    STRUCT    reduce using rule 48 (Def)
    RETURN    reduce using rule 46 (DefList)
    RETURN    [reduce using rule 48 (Def)]
    IF        reduce using rule 46 (DefList)
    IF        [reduce using rule 48 (Def)]
    WHILE     reduce using rule 46 (DefList)
    WHILE     [reduce using rule 48 (Def)]
    TYPE      reduce using rule 48 (Def)
    $default  reduce using rule 46 (DefList)


State 31

   47 Def: Specifier . DecList SEMI

    error  shift, and go to state 44
    ID     shift, and go to state 40

    VarDec   go to state 45
    DecList  go to state 46
    Dec      go to state 47


State 32

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 33

   44 DefList: Def . DefList

    error   shift, and go to state 30
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    error   [reduce using rule 45 (DefList)]
    INT     reduce using rule 45 (DefList)
    FLOAT   reduce using rule 45 (DefList)
    ID      reduce using rule 45 (DefList)
    NOT     reduce using rule 45 (DefList)
    LP      reduce using rule 45 (DefList)
    LC      reduce using rule 45 (DefList)
    RC      reduce using rule 45 (DefList)
    MINUS   reduce using rule 45 (DefList)
    RETURN  reduce using rule 45 (DefList)
    IF      reduce using rule 45 (DefList)
    WHILE   reduce using rule 45 (DefList)

    Specifier        go to state 31
    StructSpecifier  go to state 8
    DefList          go to state 49
    Def              go to state 33


State 34

   15 Specifier: error .
   31 VarList: error .
   33 ParamDec: error .

    COMMA     reduce using rule 33 (ParamDec)
    RP        reduce using rule 31 (VarList)
    RP        [reduce using rule 33 (ParamDec)]
    $default  reduce using rule 15 (Specifier)


State 35

   27 FunDec: ID LP RP .

    $default  reduce using rule 27 (FunDec)


State 36

   32 ParamDec: Specifier . VarDec

    error  shift, and go to state 44
    ID     shift, and go to state 40

    VarDec  go to state 50


State 37

   26 FunDec: ID LP VarList . RP

    RP  shift, and go to state 51


State 38

   29 VarList: ParamDec . COMMA VarList
   30        | ParamDec .

    COMMA  shift, and go to state 52

    $default  reduce using rule 30 (VarList)


State 39

   12 ExtDecList: error .
   25 VarDec: error .

    SEMI      reduce using rule 12 (ExtDecList)
    SEMI      [reduce using rule 25 (VarDec)]
    $default  reduce using rule 25 (VarDec)


State 40

   23 VarDec: ID .

    $default  reduce using rule 23 (VarDec)


State 41

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 42

   24 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


State 43

   34 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 28
    MINUS   shift, and go to state 60
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 44

   25 VarDec: error .

    $default  reduce using rule 25 (VarDec)


State 45

   24 VarDec: VarDec . LB INT RB
   51 Dec: VarDec .
   52    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 26

    $default  reduce using rule 51 (Dec)


State 46

   47 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 47

   49 DecList: Dec .
   50        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 49 (DecList)


State 48

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


State 49

   44 DefList: Def DefList .

    $default  reduce using rule 44 (DefList)


State 50

   24 VarDec: VarDec . LB INT RB
   32 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 32 (ParamDec)


State 51

   26 FunDec: ID LP VarList RP .

    $default  reduce using rule 26 (FunDec)


State 52

   29 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 34
    STRUCT  shift, and go to state 2
    TYPE    shift, and go to state 3

    Specifier        go to state 36
    StructSpecifier  go to state 8
    VarList          go to state 71
    ParamDec         go to state 38


State 53

   24 VarDec: VarDec LB INT RB .

    $default  reduce using rule 24 (VarDec)


State 54

   35 CompSt: error .
   71 Exp: error .

    SEMI      reduce using rule 71 (Exp)
    ASSIGNOP  reduce using rule 71 (Exp)
    DOT       reduce using rule 71 (Exp)
    LB        reduce using rule 71 (Exp)
    STAR      reduce using rule 71 (Exp)
    DIV       reduce using rule 71 (Exp)
    AND       reduce using rule 71 (Exp)
    OR        reduce using rule 71 (Exp)
    PLUS      reduce using rule 71 (Exp)
    MINUS     reduce using rule 35 (CompSt)
    MINUS     [reduce using rule 71 (Exp)]
    RELOP     reduce using rule 71 (Exp)
    $default  reduce using rule 35 (CompSt)


State 55

   69 Exp: INT .

    $default  reduce using rule 69 (Exp)


State 56

   70 Exp: FLOAT .

    $default  reduce using rule 70 (Exp)


State 57

   64 Exp: ID . LP Args RP
   65    | ID . LP RP
   68    | ID .

    LP  shift, and go to state 72

    $default  reduce using rule 68 (Exp)


State 58

   63 Exp: NOT . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 74


State 59

   61 Exp: LP . Exp RP

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 75


State 60

   62 Exp: MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 76


State 61

   40 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 77


State 62

   41 Stmt: IF . LP Exp RP Stmt
   42     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 78


State 63

   43 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 79


State 64

   39 Stmt: CompSt .

    $default  reduce using rule 39 (Stmt)


State 65

   34 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 80


State 66

   36 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59
    LC      shift, and go to state 28
    MINUS   shift, and go to state 60
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 37 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 81
    Stmt      go to state 66
    Exp       go to state 67


State 67

   38 Stmt: Exp . SEMI
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    SEMI      shift, and go to state 82
    ASSIGNOP  shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    RELOP     shift, and go to state 92


State 68

   52 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 93


State 69

   47 Def: Specifier DecList SEMI .

    $default  reduce using rule 47 (Def)


State 70

   50 DecList: Dec COMMA . DecList

    error  shift, and go to state 44
    ID     shift, and go to state 40

    VarDec   go to state 45
    DecList  go to state 94
    Dec      go to state 47


State 71

   29 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 29 (VarList)


State 72

   64 Exp: ID LP . Args RP
   65    | ID LP . RP

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 95
    MINUS  shift, and go to state 60

    Exp   go to state 96
    Args  go to state 97


State 73

   71 Exp: error .

    $default  reduce using rule 71 (Exp)


State 74

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   63    | NOT Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    DOT    shift, and go to state 84
    LB     shift, and go to state 85
    STAR   shift, and go to state 86
    DIV    shift, and go to state 87
    AND    shift, and go to state 88
    OR     shift, and go to state 89
    PLUS   shift, and go to state 90
    MINUS  shift, and go to state 91
    RELOP  shift, and go to state 92

    RELOP     [reduce using rule 63 (Exp)]
    $default  reduce using rule 63 (Exp)


State 75

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   61    | LP Exp . RP
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 98
    LB        shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    RELOP     shift, and go to state 92


State 76

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   62    | MINUS Exp .
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    RELOP  shift, and go to state 92

    RELOP     [reduce using rule 62 (Exp)]
    $default  reduce using rule 62 (Exp)


State 77

   40 Stmt: RETURN Exp . SEMI
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    SEMI      shift, and go to state 99
    ASSIGNOP  shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    RELOP     shift, and go to state 92


State 78

   41 Stmt: IF LP . Exp RP Stmt
   42     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 100


State 79

   43 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 101


State 80

   34 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 34 (CompSt)


State 81

   36 StmtList: Stmt StmtList .

    $default  reduce using rule 36 (StmtList)


State 82

   38 Stmt: Exp SEMI .

    $default  reduce using rule 38 (Stmt)


State 83

   53 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 102


State 84

   67 Exp: Exp DOT . ID

    ID  shift, and go to state 103


State 85

   66 Exp: Exp LB . Exp RB

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 104


State 86

   57 Exp: Exp STAR . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 105


State 87

   58 Exp: Exp DIV . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 106


State 88

   54 Exp: Exp AND . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 107


State 89

   55 Exp: Exp OR . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 108


State 90

   59 Exp: Exp PLUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 109


State 91

   60 Exp: Exp MINUS . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 110


State 92

   56 Exp: Exp RELOP . Exp

    error  shift, and go to state 73
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    MINUS  shift, and go to state 60

    Exp  go to state 111


State 93

   52 Dec: VarDec ASSIGNOP Exp .
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    RELOP     shift, and go to state 92

    $default  reduce using rule 52 (Dec)


State 94

   50 DecList: Dec COMMA DecList .

    $default  reduce using rule 50 (DecList)


State 95

   65 Exp: ID LP RP .

    $default  reduce using rule 65 (Exp)


State 96

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID
   72 Args: Exp . COMMA Args
   73     | Exp .

    COMMA     shift, and go to state 112
    ASSIGNOP  shift, and go to state 83
    DOT       shift, and go to state 84
    LB        shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    RELOP     shift, and go to state 92

    $default  reduce using rule 73 (Args)


State 97

   64 Exp: ID LP Args . RP

    RP  shift, and go to state 113


State 98

   61 Exp: LP Exp RP .

    $default  reduce using rule 61 (Exp)


State 99

   40 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 40 (Stmt)


State 100

   41 Stmt: IF LP Exp . RP Stmt
   42     | IF LP Exp . RP Stmt ELSE Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . STAR Exp
   58    | Exp . DIV Exp
   59    | Exp . PLUS Exp
   60    | Exp . MINUS Exp
   66    | Exp . LB Exp RB
   67    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 83
    DOT       shift, and go to state 84
    RP        shift, and go to state 114
    LB        shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    AND       shift, and go to state 88
    OR        shift, and go to state 89
    PLUS      shift, and go to state 90
    MINUS     shift, and go to state 91
    RELOP     shift, and go to state 92


State 101
